--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
         "streetsidesoftware.code-spell-checker-french"
       ],
       "settings": {
-        "latex-workshop.latex.recipe.default": "latexmk (lualatex)",
+        "latex-workshop.latex.recipe.default": "latexmk (pdflatex)",
         "latex-workshop.latex.recipes": [
           {
             "name": "latexmk (lualatex)",
